--- a/src/styles/Landing.css
+++ b/src/styles/Landing.css
@@ -6,7 +6,7 @@ header {
   flex-direction: column;
   align-items: flex-end;
   text-align: right;
-  margin: 7%;
+  margin: 7% 7% 0;
 }
 
 header > h3 {
